--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -5,10 +5,6 @@ _welcome:
         route: get_notes
         permanent: true # this for 301
 
-_demo_note:
-    resource: "@AcmeDemoBundle/Controller/NoteController.php"
-    type:     rest
-
 _wdt:
     resource: "@WebProfilerBundle/Resources/config/routing/wdt.xml"
     prefix:   /_wdt
@@ -23,3 +19,7 @@ _configurator:
 
 _main:
     resource: routing.yml
+
+_pomm:
+    resource: "@PommBundle/Resources/config/routing.yml"
+    prefix:   /_pomm
