--- a/composer.json
+++ b/composer.json
@@ -1,56 +1,61 @@
 {
-    "name": "gimler/symfony-rest-edition",
-    "license": "MIT",
-    "type": "project",
-    "description": "The \"Symfony REST Edition\" distribution",
-    "autoload": {
-        "psr-0": { "": "src/" }
-    },
-    "require": {
-        "php": ">=5.3.3",
-        "symfony/symfony": "~2.3",
-        "symfony/icu": "1.0.*",
-        "doctrine/orm": "~2.2,>=2.2.3",
-        "doctrine/doctrine-bundle": "1.2.*",
-        "twig/extensions": "1.0.*",
-        "symfony/assetic-bundle": "2.3.*",
-        "symfony/swiftmailer-bundle": "2.3.*",
-        "symfony/monolog-bundle": "~2.3",
-        "sensio/distribution-bundle": "2.3.*",
-        "sensio/framework-extra-bundle": "2.3.*",
-        "sensio/generator-bundle": "2.3.*",
-        "jms/serializer-bundle": "0.13.*@dev",
-        "friendsofsymfony/rest-bundle": "1.4.*",
-        "nelmio/api-doc-bundle": "~2.4",
-        "friendsofsymfony/http-cache-bundle": "~1.0",
-        "willdurand/hateoas-bundle": "1.0.*@dev",
-        "hautelook/templated-uri-bundle": "~2.0",
-        "willdurand/rest-extra-bundle": "~1.0"
-    },
-    "conflict": {
-        "symfony/routing": "2.4.1"
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
-        ],
-        "post-update-cmd": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
-        ]
-    },
-    "config": {
-        "bin-dir": "bin"
-    },
-    "minimum-stability": "stable",
-    "extra": {
-        "symfony-app-dir": "app",
-        "symfony-web-dir": "web",
-        "branch-alias": {
-            "dev-master": "2.3-dev"
-        }
+  "name": "gimler/symfony-rest-edition",
+  "license": "MIT",
+  "type": "project",
+  "description": "The \"Symfony REST Edition\" distribution",
+  "autoload": {
+    "psr-0": {"": "src/"}
+  },
+  "require": {
+    "php": ">=5.3.3",
+    "symfony/symfony": "2.6.x-dev",
+    "symfony/icu": "1.0.*",
+    "doctrine/orm": "~2.2,>=2.2.3",
+    "doctrine/doctrine-bundle": "1.2.*",
+    "twig/extensions": "1.0.*",
+    "symfony/assetic-bundle": "2.3.*",
+    "symfony/swiftmailer-bundle": "2.3.*",
+    "symfony/monolog-bundle": "~2.3",
+    "sensio/distribution-bundle": "2.3.*",
+    "sensio/framework-extra-bundle": "2.3.*",
+    "sensio/generator-bundle": "2.3.*",
+    "jms/serializer-bundle": "0.13.*@dev",
+    "friendsofsymfony/rest-bundle": "1.4.*",
+    "nelmio/api-doc-bundle": "~2.4",
+    "friendsofsymfony/http-cache-bundle": "~1.0",
+    "willdurand/hateoas-bundle": "1.0.*@dev",
+    "hautelook/templated-uri-bundle": "~2.0",
+    "willdurand/rest-extra-bundle": "~1.0",
+    "pomm-project/cli": "2.0.*@dev",
+    "pomm-project/model-manager": "2.0.*@dev",
+    "pomm-project/foundation": "2.0.*@dev",
+    "pomm-project/pomm-symfony-bridge": "2.0.*@dev",
+    "pomm-project/pomm-bundle": "2.0.*@dev"
+  },
+  "conflict": {
+    "symfony/routing": "2.4.1"
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+    ],
+    "post-update-cmd": [
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+    ]
+  },
+  "config": {
+    "bin-dir": "bin"
+  },
+  "minimum-stability": "stable",
+  "extra": {
+    "symfony-app-dir": "app",
+    "symfony-web-dir": "web",
+    "branch-alias": {
+      "dev-master": "2.3-dev"
     }
+  }
 }
