--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "pomm-project/model-manager": "2.0.*@dev",
     "pomm-project/foundation": "2.0.*@dev",
     "pomm-project/pomm-symfony-bridge": "2.0.*@dev",
-    "pomm-project/pomm-bundle": "2.0.*@dev"
+    "pomm-project/pomm-bundle": "2.0.*@dev",
+    "atoum/atoum": "1.*@dev"
   },
   "conflict": {
     "symfony/routing": "2.4.1"
