--- a/src/Bolbo/BlogBundle/Resources/config/services.yml
+++ b/src/Bolbo/BlogBundle/Resources/config/services.yml
@@ -2,6 +2,8 @@ parameters:
 #    bolbo_blog.example.class: Bolbo\BlogBundle\Example
 
 services:
-#    bolbo_blog.example:
-#        class: %bolbo_blog.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    bolbo.blog.post_manager:
+        class: Bolbo\BlogBundle\Manager\PostManager
+        arguments:
+            - @security.secure_random
+            - %kernel.cache_dir%
