--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,10 @@
     "pomm-project/foundation": "2.0.*@dev",
     "pomm-project/pomm-symfony-bridge": "2.0.*@dev",
     "pomm-project/pomm-bundle": "2.0.*@dev",
-    "atoum/atoum": "1.*@dev"
+    "atoum/atoum": "1.*@dev",
+    "behat/behat": "3.0.*@dev",
+    "guzzle/guzzle": "3.9.*@dev",
+    "guzzlehttp/guzzle": "5.0.*@dev"
   },
   "conflict": {
     "symfony/routing": "2.4.1"
@@ -58,5 +61,11 @@
     "branch-alias": {
       "dev-master": "2.3-dev"
     }
+  },
+  "require-dev": {
+    "behat/symfony2-extension": "~2.0",
+    "behat/mink": "~1.6",
+    "behat/mink-extension": "~2.0",
+    "behat/mink-browserkit-driver": "~1.2"
   }
 }
