extract database connexion name to parameters.yml refactor postManager

--- a/src/Bolbo/BlogBundle/Resources/config/services.yml
+++ b/src/Bolbo/BlogBundle/Resources/config/services.yml
@@ -6,4 +6,5 @@ services:
         class: Bolbo\BlogBundle\Manager\PostManager
         arguments:
             - @pomm
+            - %database_connexion%
             - \Bolbo\Component\Model\Database\PublicSchema\PostModel
