add cocur/slugify lib

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "atoum/atoum": "1.*@dev",
     "behat/behat": "3.0.*@dev",
     "guzzle/guzzle": "3.9.*@dev",
-    "guzzlehttp/guzzle": "5.0.*@dev"
+    "guzzlehttp/guzzle": "5.0.*@dev",
+    "cocur/slugify": "dev-master"
   },
   "conflict": {
     "symfony/routing": "2.4.1"
