update edit & create function

--- a/src/Bolbo/BlogBundle/Resources/config/services.yml
+++ b/src/Bolbo/BlogBundle/Resources/config/services.yml
@@ -8,3 +8,4 @@ services:
             - @pomm
             - %database_connexion%
             - \Bolbo\Component\Model\Database\PublicSchema\PostModel
+            - @cocur_slugify
