--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "symfony/swiftmailer-bundle": "2.3.*",
     "symfony/monolog-bundle": "~2.3",
     "sensio/distribution-bundle": "2.3.*",
-    "sensio/framework-extra-bundle": "2.3.*",
+    "sensio/framework-extra-bundle": "3.0.x-dev",
     "sensio/generator-bundle": "2.3.*",
     "jms/serializer-bundle": "0.13.*@dev",
     "friendsofsymfony/rest-bundle": "1.4.*",
